--- a/Feature.html
+++ b/Feature.html
@@ -88,7 +88,7 @@
               <h1 class="display-5 fw-bold text-white lh-1 mb-3">
                 Easy to use.
               </h1>
-              <p class="lead text-white text-opacity-75">
+              <p class="lead text-white text-opacity-75 FeatureP">
                 So easy to use, even your dog could do it.
               </p>
               <div class="d-grid gap-2 mt-5 d-md-flex justify-content-md-start">
@@ -121,8 +121,8 @@
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold text-white lh-1 mb-3">
               Elite Clientele.
-            </h1>
-            <p class="lead text-white text-opacity-75">
+            </h1> 
+            <p class="lead text-white text-opacity-75 FeatureP">
               We have all the dogs, the greatest dogs.
             </p>
           </div>
@@ -148,7 +148,7 @@
             <h1 class="display-5 fw-bold text-white lh-1 mb-3">
               Say more than Woof!.
             </h1>
-            <p class="lead text-white text-opacity-75">
+            <p class="lead text-white text-opacity-75 FeatureP">
               Chat with your matches with ease. With options for emojis and
               stickers.
             </p>
@@ -184,13 +184,10 @@
                 </ul>
               </div>
   
-              <div class="d-flex flex-column flex-sm-row border-top my-4 py-4 ">
-                <h4 class="col-3 text-white">Get the app !</h4>
-                <div class="d-flex flex-column flex-sm-row gap-5">
-                  <a class="col-2" href="#"><img src="./images/AppleStore.png" alt="apple store logo" style="width: 100%; border:2px solid rgb(138, 136, 136); border-radius:5%;"/></a>
-                  
-                  <a class="col-2" href="#"><img src="./images/PlayStore.png" alt="apple store logo" style="width: 100%;border:2px solid rgb(138, 136, 136); border-radius:5%;"/></a>
-                </div>
+              <div class="d-flex flex-sm-row border-top my-4 py-4 gap-5">
+                <h4 class="text-white pt-lg-3">Get the app !</h4>
+                <a class="col-2" href="#"><img src="./images/AppleStore.png" alt="apple store logo" style="width: 80%; border:2px solid rgb(138, 136, 136); border-radius:5%;"/></a>
+                <a class="col-2" href="#"><img src="./images/PlayStore.png" alt="apple store logo" style="width: 80%;border:2px solid rgb(138, 136, 136); border-radius:5%;"/></a> 
               </div>
 
               <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-1 border-top">
