--- a/index.html
+++ b/index.html
@@ -198,13 +198,10 @@
               </ul>
             </div>
 
-            <div class="d-flex flex-column flex-sm-row border-top my-4 py-4 ">
-              <h4 class="col-3 text-white">Get the app !</h4>
-              <div class="d-flex flex-column flex-sm-row gap-5">
-                <a class="col-2" href="#"><img src="./images/AppleStore.png" alt="apple store logo" style="width: 100%; border:2px solid rgb(138, 136, 136); border-radius:5%;"/></a>
-                
-                <a class="col-2" href="#"><img src="./images/PlayStore.png" alt="apple store logo" style="width: 100%;border:2px solid rgb(138, 136, 136); border-radius:5%;"/></a>
-              </div>
+            <div class="d-flex flex-sm-row border-top my-4 py-4 gap-5">
+              <h4 class="text-white pt-lg-3">Get the app !</h4>
+              <a class="col-2" href="#"><img src="./images/AppleStore.png" alt="apple store logo" style="width: 80%; border:2px solid rgb(138, 136, 136); border-radius:5%;"/></a>
+              <a class="col-2" href="#"><img src="./images/PlayStore.png" alt="apple store logo" style="width: 80%;border:2px solid rgb(138, 136, 136); border-radius:5%;"/></a> 
             </div>
 
             <div class="block text-white text-opacity-75">
